[package]
name = "acyclic-network"
version = "0.2.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/acyclic-network-rs"
description = "Acyclic network representation and construction"
keywords = ["graph", "network", "net"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.4"
fixedbitset = "0.1"
